<resources>
    <string name="app_name">Flashcards</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_underlined"><u>Sign up</u></string>
    <string name="or_sign_in_with_google">Or sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="flashcards">Flashcards</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_underlined"><u>Log in</u></string>
    <string name="sign_in">Sign in</string>
    <string name="flashcards_logo">Flashcards logo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="my_decks">My decks</string>
    <string name="profile">Profile</string>
    <string name="browse">Browse</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="invalid_email_or_password">Login failed, invalid email or password</string>
    <string name="enter_a_username">Please enter a username</string>
    <string name="enter_a_password">Please enter a password</string>
    <string name="password_requirement_message">Password must be at least 8 characters long and contain 1 uppercase letter, 1 lowercase letter and 1 number.</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="password_doesnt_match">Password does not match</string>
    <string name="username_exists">Username already exists</string>
    <string name="required_field">Required field</string>
    <string name="username_requirement_message">Username must be at least 3 characters long</string>
    <string name="create">Create</string>
    <string name="card">Card</string>
    <string name="deck">Deck</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="deck_name">Deck name</string>
    <string name="public_text">Public</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="tags">Tags</string>
    <string name="enter_deck_name_prompt">Please enter a deck name</string>
    <string name="select_deck_prompt">Please select a deck</string>
    <string name="write_question_prompt">Please write a question</string>
    <string name="write_answer_prompt">Please write an answer</string>
    <string name="tag_already_added">Tag already added</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="success">Success</string>
    <string name="deck_added_successfully">Deck added successfully</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="no_decks_found">No decks found</string>
    <string name="card_added_successfully">Card added successfully!</string>
    <string name="number_of_cards">Number of cards:</string>
    <string name="delete_deck_prompt">Delete deck?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_created">Date created:</string>
    <string name="last_updated">Last updated:</string>
    <string name="created_by">Created by:</string>
    <string name="options_button">Options button</string>
    <string name="log_out">Log out</string>
    <string name="date_joined">Date joined</string>
</resources>