<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/my_decks_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_deck_of_cards"
        android:title="@string/my_decks" />
    <item
        android:id="@+id/browse_decks_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_folder_open_24"
        android:title="@string/browse" />
    <item
        android:id="@+id/menu_item_placeholder"
        android:title="" />
    <item
        android:id="@+id/profile_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/settings_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
</menu>