<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="@dimen/login_screen_logo_size"
        android:layout_height="@dimen/login_screen_logo_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/flashcards_logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/flashcards"
        android:textAllCaps="true"
        android:textSize="@dimen/login_screen_h2" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/login_view_pager"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_login_register_container"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvAccountPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_view_linear_layout_margin_right"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/tvAccountAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/sign_up_underlined"
            android:textAllCaps="false"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>