<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.mainactivity.carddeckcreator.DeckCreatorFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Flashcards.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDeckName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/deck_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        app:useMaterialThemeColors="true"
        android:id="@+id/switchPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/public_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tags" />

    <com.google.android.material.chip.ChipGroup
    android:id="@+id/cgTags"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:chipSpacingHorizontal="@dimen/chip_spacing_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginEnd="15dp"
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:hint="@string/add_a_tag" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddTag"
            style="@style/Widget.Flashcards.Button.IconOnlyCircle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconTint="@android:color/white" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateDeck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:icon="@drawable/ic_deck_of_cards"
        app:iconSize="25dp"
        android:text="@string/create"/>
</LinearLayout>