<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_login_register_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_field_vert_gap"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_margin_end"
            android:text="@string/public_text"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Yes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_field_vert_gap"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_margin_end"
            android:text="@string/date_created"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvDateCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5/9/2021@19:21:44" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_field_vert_gap"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_margin_end"
            android:text="@string/last_updated"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvLastUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5/9/2021@19:21:44" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_field_vert_gap"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_margin_end"
            android:text="@string/created_by"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvCreatedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="pbadanjak@gmail.com" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        android:textStyle="bold" />
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="@dimen/chip_spacing_horizontal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize" />
</LinearLayout>