<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_login_register_container"
    tools:context=".fragments.signup.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailWrapper"
        style="@style/Widget.Flashcards.TextInputLayout"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_input_layout_bottom_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/etPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordWrapper"
        style="@style/Widget.Flashcards.TextInputLayout"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_input_layout_bottom_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:nextFocusDown="@id/btnLogin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.Flashcards.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="@dimen/text_input_layout_bottom_margin"
        android:text="@string/sign_in_with_email"
        android:textColor="#fff"
        app:icon="@drawable/ic_baseline_mail_outline_24"
        app:iconTint="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/or_sign_in_with_google" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
